hw2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw2
  template:
    metadata:
      labels:
        app: hw2
    spec:
      containers:
        - name: hw2
          image: nickolaymudry/otus-hw2:0.0.2
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
