hw2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw2-service
spec:
  selector:
    app: hw2
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
